--- a/vignettes/manual/SimpleNBox.Rmd
+++ b/vignettes/manual/SimpleNBox.Rmd
@@ -36,7 +36,7 @@ In each biome at each time step, the vegetation pools change as follows (biome, 
 C gain from NPP is distributed to vegetation, detritus, and soil according to fractionation parameters $f_{nv}$, $f_{nd}$, and $f_{ns}$, respectively.
 Similarly, each pool bears a fraction of the total C loss from land-use change ($F_{LC}$), again according to fractions $f_{lv}$, $f_{ld}$, and $f_{ls}$.
 The detritus and soil pools also lose C via heterotrophic respiration ($RH_d$ and $RH_s$, respectively).
-Finally, a fixed fraction of vegetation C is transferred to detritus as litterfall ($f_{vd}$), and a fraction of both vegetation ($f_{vs}$) and detritus ($f_{ds}$) are transferred to soil via decomposition.
+Finally, a fixed fraction of vegetation C is transferred to detritus as litterfall ($f_{vd}$), and a fraction of both vegetation ($f_{vs}$) and detritus ($f_{ds}$) C are transferred to soil.
 
 $$ \frac{dC_v}{dt} = NPP\, f_{nv} - C_v (f_{vd} + f_{vs}) - F_{LC} f_{lv} $$
 $$ \frac{dC_d}{dt} = NPP\, f_{nd} + C_v f_{vd} - C_d f_{ds} - RH_d - F_{LC} f_{ld} $$
