--- a/vignettes/manual/Constraints.Rmd
+++ b/vignettes/manual/Constraints.Rmd
@@ -36,9 +36,9 @@ then the model's ocean carbon uptake (in Pg C) will follow this contents of this
 Ca_constrain=csv:path/to/constraint/file.csv
 ```
 
-then the model's atmospheric carbon pool (given in ppmv CO2) will follow this contents of this file (which should have two columns, `Date` and `Ca_constrain`). The model will extrapolate within this data as necessary, but not beyond its endpoints. If the constraint [CO2] is lower than the calculated [CO2] at that time step, any excess is moved to the deep ocean; conversely, any necessary deficit is transferred from there.
-
-Once Hector's internal date passes the last date in the constraint file, the model's atmospheric CO2 becomes *unconstrained*.
-
+then the model's atmospheric carbon pool (given in ppmv CO2) will follow this contents of this file (which should have two columns, `Date` and `Ca_constrain`). If the constraint [CO2] is lower than the calculated [CO2] at that time step, any excess is moved to the deep ocean; conversely, any necessary deficit is transferred from there.
 Otherwise Hector's atmospheric carbon pool can be set using the `setvars` function and `CA_CONSTRAIN` variable.
 
+The CO2 constraint need not span the entirety of the Hector simulation, or even be continuous.
+At any given time step, Hector will check whether or not a CO2 constraint exists at that time step and only apply the constraint if it is present.
+This means that "hybrid" runs are possible, where only some specific time ranges have CO2 constraints while others calculate the atmospheric CO2 according to Hector's standard [carbon cycle](SimpleNBox).
