--- a/vignettes/manual/SimpleNBox.Rmd
+++ b/vignettes/manual/SimpleNBox.Rmd
@@ -153,7 +153,7 @@ The following values related to the terrestrial C cycle can be set via `setData`
 | Initial NPP flux                   | PgC / year | `D_NPP_FLUX0`              |                       | `npp_flux0`     | No         | Yes            | Yes | Yes |
 | Fossil fuel CO~2~ emissions        | PgC / year | `D_FFI_EMISSIONS`          | `FFI_EMISSIONS()`     | `ffiEmissions`  | Yes        | No             | Yes | Yes |
 | LUC emissions                      | PgC / year | `D_LUC_EMISSIONS`          | `LUC_EMISSIONS()`     | `lucEmissions`  | Yes        | No             | Yes | Yes |
-| Atmospheric CO2 constraint         | ppmv CO~2~ | `D_CA_CONSTRAIN`           |                       | `Ca_constrain`  | Yes        | No             | Yes | No  |
+| Atmospheric CO2 constraint         | ppmv CO~2~ | `D_CO2_CONSTRAIN`           |                       | `CO2_constrain`  | Yes        | No             | Yes | No  |
 | CO~2~ fertilization factor         | unitless   | `D_BETA`                   | `BETA()`              | `beta`          | No         | Yes            | Yes | Yes |
 | Biome warming multiplier           | unitless   | `D_WARMINGFACTOR`          |                       | `warmingfactor` | No         | Yes            | Yes | Yes |
 | RH temperature sensitivity         | unitless   | `D_Q10_RH`                 | `Q10_RH()`            | `q10_rh`        | No         | Yes            | Yes | Yes |
